{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 7,
  "lineage": "283a38a1-1cba-e13f-be0a-a2c202a81c1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465160558:internet-gateway/igw-0a4bee6f66d54ada0",
            "id": "igw-0a4bee6f66d54ada0",
            "owner_id": "438465160558",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-0adc61a53c212f997"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT-terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465160558:route-table/rtb-069140109b94e5321",
            "id": "rtb-069140109b94e5321",
            "owner_id": "438465160558",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4bee6f66d54ada0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT-terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Public-RT-terra",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc61a53c212f997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public-RT-terra-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bf47d1ae97b5472",
            "route_table_id": "rtb-069140109b94e5321",
            "subnet_id": "subnet-050f1fd0e65865fa1"
          },
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.Public-RT-terra",
            "aws_subnet.public-subnet-terra-1",
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Pub-Terra-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465160558:security-group/sg-02e4c9dbfd82fe7b9",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e4c9dbfd82fe7b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "438465160558",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Pub-Terra-SG"
            },
            "tags_all": {
              "Name": "Pub-Terra-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adc61a53c212f997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-terra-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465160558:subnet/subnet-050f1fd0e65865fa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050f1fd0e65865fa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465160558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-terra-1"
            },
            "tags_all": {
              "Name": "public-subnet-terra-1"
            },
            "vpc_id": "vpc-0adc61a53c212f997"
          },
          "dependencies": [
            "aws_vpc.vpc_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465160558:vpc/vpc-0adc61a53c212f997",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a0095c16c25295e",
            "default_route_table_id": "rtb-05519a3eea27ea63b",
            "default_security_group_id": "sg-0a48c51e093045886",
            "dhcp_options_id": "dopt-047bf93500a7a2a65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0adc61a53c212f997",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05519a3eea27ea63b",
            "owner_id": "438465160558",
            "tags": {
              "Name": "vpc_terraform"
            },
            "tags_all": {
              "Name": "vpc_terraform"
            }
          }
        }
      ]
    }
  ]
}